--- a/index.html
+++ b/index.html
@@ -9,30 +9,30 @@
   </head>
   <body>
     <!--SiteBar-->
-    <header>
+    <header class="page-header">
       <nav>
-        <a lang="en" href="/">WebStudio</a>
-        <ul>
-          <li><a href="/index.html">Студія</a></li>
-          <li><a href="/portfolio.html">Портфоліо</a></li>
-          <li><a href="/">Контакти</a></li>
+        <a class="logo" lang="en" href="/"><span class="logoweb">Web</span>Studio</a>
+        <ul class="nav-header">
+          <li><a class="link" href="/index.html">Студія</a></li>
+          <li><a class="link" href="/portfolio.html">Портфоліо</a></li>
+          <li><a class="link" href="/">Контакти</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="adres-header">
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
       <!--BlockHero-->
-        <section>
-          <h1>Ефективні рішення для вашого бізнесу</h1>
-          <button type="button">Замовити послугу</button>
+        <section class="hero">
+          <h1 class="hero-text">Ефективні рішення для вашого бізнесу</h1>
+          <button class="hero-botton" type="button">Замовити послугу</button>
         </section>
       <!--information company-->
-      <section>
+      <section class="pro-nas">
         <h2 style="display:none;">Наші Переваги</h2>
-        <ul>
+        <ul class="size-info">
           <li>
             <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
             <p>
@@ -62,7 +62,7 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="us-work">
         <h2>Чим ми займаємося</h2>
         <ul>
         <li><img
@@ -85,9 +85,9 @@
         /></li>
       </ul>
       </section>
-      <section>
+      <section class="comanda">
         <h2>Наша команда</h2>
-        <ul>
+        <ul class="delopers">
           <li>
             <img
               src="./images/people/p1.jpg"
