--- a/portfolio.html
+++ b/portfolio.html
@@ -23,8 +23,10 @@
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
+    <!--All info+filtr-->
     <main>
         <ul>
+            <h2 style="display: none;">info</h2>
             <li><button type="button">Усі</button></li>
             <li><button type="button">Веб-сайт</button></li>
             <li><button type="button">Додатки</button></li>
@@ -32,6 +34,7 @@
             <li><button type="button">Маркетинг</button></li>
             <li>
                 <ul>
+                    <!--Info block-->
                     <li>
                         <a href=""><img src="./images/page2/page8.jpg" alt="laptop" width="370" height="295">
                         <h2>Технокряк</h2>
@@ -41,56 +44,56 @@
                     <li>
                         <a href="">
                             <img src="./images/page2/page1.jpg" alt="bascetbal" width="370" height="295">
-                            <h2>Постер New Orlean vs Golden Star</h2>
+                            <h3>Постер New Orlean vs Golden Star</h3>
                             <p>Дизайн</p>
                         </a>
                     </li>
                     <li>
                         <a href="">
                             <img src="./images/page2/page2.jpg" alt="fishpage" width="370" height="295">
-                            <h2>Ресторан Seafood</h2>
+                            <h3>Ресторан Seafood</h3>
                             <p>Додаток</p>
                         </a>
                     </li>
                     <li>
                         <a href="">
                             <img src="./images/page2/page3.jpg" alt="lsten" width="370" height="295">
-                            <h2>Проєкт Prime</h2>
+                            <h3>Проєкт Prime</h3>
                             <p>Маркетинг</p>
                         </a>
                     </li>
                     <li>
                         <a href="">
                             <img src="./images/page2/page4.jpg" alt="box" width="370" height="295"> 
-                            <h2>Проєкт Boxes</h2>
+                            <h3>Проєкт Boxes</h3>
                             <p>Додаток</p>
                         </a>
                     </li>
                     <li>
                         <a href="">
                             <img src="./images/page2/page9.jpg" alt="imac" width="370" height="295">
-                            <h2>Inspiration has no Borders</h2>
+                            <h3>Inspiration has no Borders</h3>
                             <p>Веб-сайт</p>
                         </a>
                     </li>
                     <li>
                         <a href="">
                             <img src="./images/page2/page5.jpg" alt="book" width="370" height="295">
-                            <h2>Видання Limited Edition</h2>
+                            <h3>Видання Limited Edition</h3>
                             <p>Дизайн</p>
                         </a>
                     </li>
                     <li>
                         <a href="">
                             <img src="./images/page2/page6.jpg" alt="sale" width="370" height="295">
-                            <h2>Проєкт LAB</h2>
+                            <h3>Проєкт LAB</h3>
                             <p>Маркетинг</p>
                         </a>
                     </li>
                     <li>
                         <a href="">
                             <img src="./images/page2/page7.jpg" alt="deloper" width="370" height="295">
-                            <h2>Growing Business</h2>
+                            <h3>Growing Business</h3>
                             <p>Додаток</p>
                         </a>
                     </li>
