--- a/index.html
+++ b/index.html
@@ -5,22 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,500;0,700;1,400&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
     <!--SiteBar-->
     <header class="page-header">
       <nav>
-        <a class="logo" lang="en" href="/"><span class="logoweb">Web</span>Studio</a>
-        <ul class="nav-header">
-          <li><a class="link" href="/index.html">Студія</a></li>
+        <a class="logo list" lang="en" href="/"><span class="logoweb">Web</span>Studio</a>
+        <ul class="nav-header list">
+          <li><a class="link " href="/index.html">Студія</a></li>
           <li><a class="link" href="/portfolio.html">Портфоліо</a></li>
           <li><a class="link" href="/">Контакти</a></li>
         </ul>
       </nav>
-      <ul class="adres-header">
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="adres-header list">
+        <li><a class="list" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="list" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
@@ -32,7 +35,7 @@
       <!--information company-->
       <section class="pro-nas">
         <h2 style="display:none;">Наші Переваги</h2>
-        <ul class="size-info">
+        <ul class="size-info list">
           <li>
             <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
             <p>
@@ -64,7 +67,7 @@
       </section>
       <section class="us-work">
         <h2>Чим ми займаємося</h2>
-        <ul>
+        <ul class="list">
         <li><img
           src="./images/part1.jpg"
           alt="web developer"
@@ -85,9 +88,9 @@
         /></li>
       </ul>
       </section>
-      <section class="comanda">
+      <section class="us-work">
         <h2>Наша команда</h2>
-        <ul class="delopers">
+        <ul class="delopers list">
           <li>
             <img
               src="./images/people/p1.jpg"
@@ -134,12 +137,12 @@
     <!--adress footer-->
     <footer>
       <div>
-        <a lang="en" href="/">WebStudio</a>
+        <a class="logo-footer list" lang="en" href="/"><span class="logoweb">Web</span>Studio</a>
         <address>
-          <ul>
-            <li><a href="https://goo.gl/maps/yThBwbWwu9JTvZc1A">м. Київ, пр-т Лесі Українки, 26</a></li>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <ul class="adres-header list">
+            <li><a class="str list" href="https://goo.gl/maps/yThBwbWwu9JTvZc1A">м. Київ, пр-т Лесі Українки, 26</a></li>
+            <li><a class="list" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="list" href="tel:+380961111111">+38 096 111 11 11</a></li>
           </ul>
         </address>
       </div>
