--- a/portfolio.html
+++ b/portfolio.html
@@ -5,36 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,500;0,700;1,400&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
     <!--SiteBar-->
-    <header>
+    <header class="page-header">
       <nav>
-        <a lang="en" href="/">WebStudio</a>
-        <ul>
-          <li><a href="/index.html">Студія</a></li>
-          <li><a href="/portfolio.html">Портфоліо</a></li>
-          <li><a href="/">Контакти</a></li>
+        <a class="logo" lang="en" href="/"><span class="logoweb">Web</span>Studio</a>
+        <ul class="nav-header">
+          <li><a class="link" href="/index.html">Студія</a></li>
+          <li><a class="link" href="/portfolio.html">Портфоліо</a></li>
+          <li><a class="link" href="/">Контакти</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="adres-header">
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <!--All info+filtr-->
+    
     <main>
+      <section>
+      <h2 class="list">filtr</h2>
         <ul>
-            <h2 style="display: none;">info</h2>
-            <li><button type="button">Усі</button></li>
-            <li><button type="button">Веб-сайт</button></li>
-            <li><button type="button">Додатки</button></li>
-            <li><button type="button">Дизайн</button></li>
-            <li><button type="button">Маркетинг</button></li>
+            <li><button class="botton-filtr" type="button">Усі</button></li>
+            <li><button class="botton-filtr" type="button">Веб-сайт</button></li>
+            <li><button class="botton-filtr" type="button">Додатки</button></li>
+            <li><button class="botton-filtr" type="button">Дизайн</button></li>
+            <li><button class="botton-filtr" type="button">Маркетинг</button></li>
+
+                                <!--Info block-->
+
             <li>
                 <ul>
-                    <!--Info block-->
                     <li>
                         <a href=""><img src="./images/page2/page8.jpg" alt="laptop" width="370" height="295">
                         <h2>Технокряк</h2>
@@ -100,16 +107,17 @@
                 </ul>
             </li>
         </ul>
+      </section>
     </main>
     <!--adress footer-->
     <footer>
       <div>
-        <a lang="en" href="/">WebStudio</a>
+        <a class="logo" lang="en" href="/"><span class="logoweb">Web</span>Studio</a>
         <address>
-          <ul>
-            <li><a href="https://goo.gl/maps/yThBwbWwu9JTvZc1A">м. Київ, пр-т Лесі Українки, 26</a></li>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <ul class="adres-header">
+            <li><a class="link" href="https://goo.gl/maps/yThBwbWwu9JTvZc1A">м. Київ, пр-т Лесі Українки, 26</a></li>
+            <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
           </ul>
         </address>
       </div>
