--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <!--BlockHero-->
         <section class="hero">
           <h1 class="hero-text">Ефективні рішення для вашого бізнесу</h1>
-          <button class="hero-botton" type="button">Замовити послугу</button>
+          <button type="button">Замовити послугу</button>
         </section>
       <!--information company-->
       <section class="pro-nas">
