--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <header class="page-header">
       <nav>
         <a class="logo list" lang="en" href="/"><span class="logoweb">Web</span>Studio</a>
-        <ul class="nav-header list">
-          <li><a class="link " href="/index.html">Студія</a></li>
+        <ul class="list">
+          <li><a class="link active" href="/index.html">Студія</a></li>
           <li><a class="link" href="/portfolio.html">Портфоліо</a></li>
           <li><a class="link" href="/">Контакти</a></li>
         </ul>
@@ -30,43 +30,43 @@
       <!--BlockHero-->
         <section class="hero">
           <h1 class="hero-text">Ефективні рішення для вашого бізнесу</h1>
-          <button type="button">Замовити послугу</button>
+          <button class="hero-button" type="button">Замовити послугу</button>
         </section>
       <!--information company-->
       <section class="pro-nas">
         <h2 style="display:none;">Наші Переваги</h2>
-        <ul class="size-info list">
+        <ul class="list">
           <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>
+            <h3 class="size-info">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p .size-info-p>
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
           <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
-            <p>
+            <h3 class="size-info">ПУНКТУАЛЬНІСТЬ</h3>
+            <p .size-info-p>
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
-            <h3>ПЛАНУВАННЯ</h3>
-            <p>
+            <h3 class="size-info">ПЛАНУВАННЯ</h3>
+            <p .size-info-p>
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p>
+            <h3 class="size-info">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p .size-info-p>
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
             </p>
           </li>
         </ul>
       </section>
-      <section class="us-work">
-        <h2>Чим ми займаємося</h2>
+      <section>
+        <h2 class="us-work">Чим ми займаємося</h2>
         <ul class="list">
         <li><img
           src="./images/part1.jpg"
@@ -88,9 +88,9 @@
         /></li>
       </ul>
       </section>
-      <section class="us-work">
-        <h2>Наша команда</h2>
-        <ul class="delopers list">
+      <section>
+        <h2 class="us-work">Наша команда</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/people/p1.jpg"
@@ -98,8 +98,8 @@
               width="270"
               height="260"
             />
-            <h3>Ігор Дем'яненко</h3>
-            <p lang="en">Product Designer</p>
+            <h3 class="delopers">Ігор Дем'яненко</h3>
+            <p class="delopers-p" lang="en">Product Designer</p>
           </li>
           <li>
             <img
@@ -108,8 +108,8 @@
               width="270"
               height="260"
             />
-            <h3>Ольга Рєпіна</h3>
-            <p lang="en">Product Designer</p>
+            <h3 class="delopers">Ольга Рєпіна</h3>
+            <p class="delopers-p" lang="en">Product Designer</p>
           </li>
           <li>
             <img
@@ -118,8 +118,8 @@
               width="270"
               height="260"
             />
-            <h3>Микола Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <h3 class="delopers">Микола Тарасов</h3>
+            <p class="delopers-p" lang="en">Marketing</p>
           </li>
           <li>
             <img
@@ -128,14 +128,14 @@
               width="270"
               height="260"
             />
-            <h3>Михайло Єрмаков</h3>
-            <p lang="en">UI Designer</p>
+            <h3 class="delopers">Михайло Єрмаков</h3>
+            <p class="delopers-p" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!--adress footer-->
-    <footer>
+    <footer class="footer">
       <div>
         <a class="logo-footer list" lang="en" href="/"><span class="logoweb">Web</span>Studio</a>
         <address>
