--- a/portfolio.html
+++ b/portfolio.html
@@ -14,24 +14,24 @@
     <!--SiteBar-->
     <header class="page-header">
       <nav>
-        <a class="logo" lang="en" href="/"><span class="logoweb">Web</span>Studio</a>
-        <ul class="nav-header">
+        <a class="logo list" lang="en" href="/"><span class="logoweb">Web</span>Studio</a>
+        <ul class="list">
           <li><a class="link" href="/index.html">Студія</a></li>
-          <li><a class="link" href="/portfolio.html">Портфоліо</a></li>
+          <li><a class="link active" href="/portfolio.html">Портфоліо</a></li>
           <li><a class="link" href="/">Контакти</a></li>
         </ul>
       </nav>
-      <ul class="adres-header">
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="adres-header list">
+        <li><a class="list" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="list" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <!--All info+filtr-->
     
     <main>
-      <section>
-      <h2 class="list">filtr</h2>
-        <ul>
+      <section class="main">
+      <h2 class="filtr">filtr</h2>
+        <ul class="list">
             <li><button class="botton-filtr" type="button">Усі</button></li>
             <li><button class="botton-filtr" type="button">Веб-сайт</button></li>
             <li><button class="botton-filtr" type="button">Додатки</button></li>
@@ -41,67 +41,68 @@
                                 <!--Info block-->
 
             <li>
-                <ul>
-                    <li>
-                        <a href=""><img src="./images/page2/page8.jpg" alt="laptop" width="370" height="295">
-                        <h2>Технокряк</h2>
-                        <p>Веб-сайт</p>
-                        </a>
+                <ul class="menu list">
+                    <li class="menu-tehno">
+                      <a class="link" href="">
+                        <img src="./images/page2/page8.jpg" alt="laptop" width="370" height="295">
+                        <h3 class="menu-h3">Технокряк</h3>
+                        <p class="menu-p">Веб-сайт</p>
+                       </a>
                     </li>
-                    <li>
-                        <a href="">
+                    <li class="menu-disayn">
+                        <a class="link" href="">
                             <img src="./images/page2/page1.jpg" alt="bascetbal" width="370" height="295">
-                            <h3>Постер New Orlean vs Golden Star</h3>
-                            <p>Дизайн</p>
+                            <h3 class="menu-h3">Постер New Orlean vs Golden Star</h3>
+                            <p class="menu-p">Дизайн</p>
                         </a>
                     </li>
-                    <li>
-                        <a href="">
+                    <li class="menu-restoran">
+                        <a class="link" href="">
                             <img src="./images/page2/page2.jpg" alt="fishpage" width="370" height="295">
-                            <h3>Ресторан Seafood</h3>
-                            <p>Додаток</p>
+                            <h3 class="menu-h3">Ресторан Seafood</h3>
+                            <p class="menu-p">Додаток</p>
                         </a>
                     </li>
-                    <li>
-                        <a href="">
+                    <li class="menu-market">
+                        <a class="link" href="">
                             <img src="./images/page2/page3.jpg" alt="lsten" width="370" height="295">
-                            <h3>Проєкт Prime</h3>
-                            <p>Маркетинг</p>
+                            <h3 class="menu-h3">Проєкт Prime</h3>
+                            <p class="menu-p">Маркетинг</p>
                         </a>
                     </li>
-                    <li>
-                        <a href="">
+                    <li class="menu-proekt">
+                        <a class="link" href="">
                             <img src="./images/page2/page4.jpg" alt="box" width="370" height="295"> 
-                            <h3>Проєкт Boxes</h3>
-                            <p>Додаток</p>
+                            <h3 class="menu-h3">Проєкт Boxes</h3>
+                            <p class="menu-p">Додаток</p>
                         </a>
                     </li>
-                    <li>
-                        <a href="">
+                    <li class="menu-web">
+                        <a class="link" href="">
                             <img src="./images/page2/page9.jpg" alt="imac" width="370" height="295">
-                            <h3>Inspiration has no Borders</h3>
-                            <p>Веб-сайт</p>
+                            <h3 class="menu-h3">Inspiration has no Borders</h3>
+                            <p class="menu-p">Веб-сайт</p>
                         </a>
                     </li>
-                    <li>
-                        <a href="">
+                    <li class="menu-limited">
+                        <a class="link" href="">
                             <img src="./images/page2/page5.jpg" alt="book" width="370" height="295">
-                            <h3>Видання Limited Edition</h3>
-                            <p>Дизайн</p>
+                            <h3 class="menu-h3">Видання Limited Edition</h3>
+                            <p class="menu-p">Дизайн</p>
                         </a>
                     </li>
-                    <li>
-                        <a href="">
+                    <li class="menu-mark">
+                        <a class="link" href="">
                             <img src="./images/page2/page6.jpg" alt="sale" width="370" height="295">
-                            <h3>Проєкт LAB</h3>
-                            <p>Маркетинг</p>
+                            <h3 class="menu-h3">Проєкт LAB</h3>
+                            <p class="menu-p">Маркетинг</p>
                         </a>
                     </li>
-                    <li>
-                        <a href="">
+                    <li class="menu-busines">
+                        <a class="link" href="">
                             <img src="./images/page2/page7.jpg" alt="deloper" width="370" height="295">
-                            <h3>Growing Business</h3>
-                            <p>Додаток</p>
+                            <h3 class="menu-h3">Growing Business</h3>
+                            <p class="menu-p">Додаток</p>
                         </a>
                     </li>
                 </ul>
@@ -110,11 +111,11 @@
       </section>
     </main>
     <!--adress footer-->
-    <footer>
+    <footer class="footer">
       <div>
-        <a class="logo" lang="en" href="/"><span class="logoweb">Web</span>Studio</a>
+        <a class="logo list" lang="en" href="/"><span class="logoweb">Web</span>Studio</a>
         <address>
-          <ul class="adres-header">
+          <ul class="adres-header list">
             <li><a class="link" href="https://goo.gl/maps/yThBwbWwu9JTvZc1A">м. Київ, пр-т Лесі Українки, 26</a></li>
             <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
