--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <nav>
         <a class="logo list" lang="en" href="/"><span class="logoweb">Web</span>Studio</a>
         <ul class="list">
-          <li><a class="link active" href="/index.html">Студія</a></li>
-          <li><a class="link" href="/portfolio.html">Портфоліо</a></li>
+          <li><a class="link active" href="./index.html">Студія</a></li>
+          <li><a class="link" href="./portfolio.html">Портфоліо</a></li>
           <li><a class="link" href="/">Контакти</a></li>
         </ul>
       </nav>
@@ -139,10 +139,10 @@
       <div>
         <a class="logo-footer list" lang="en" href="/"><span class="logoweb">Web</span>Studio</a>
         <address>
-          <ul class="adres-header list">
-            <li><a class="str list" href="https://goo.gl/maps/yThBwbWwu9JTvZc1A">м. Київ, пр-т Лесі Українки, 26</a></li>
-            <li><a class="list" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="list" href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <ul class="adres-footer list">
+            <li><a class="str list " href="https://goo.gl/maps/yThBwbWwu9JTvZc1A">м. Київ, пр-т Лесі Українки, 26</a></li>
+            <li><a class="list adres-footer" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="list adres-footer" href="tel:+380961111111">+38 096 111 11 11</a></li>
           </ul>
         </address>
       </div>
